# EECE5554-FinalProject

./: .gitignore  LICENSE  README.md
config/: nav2.yaml  (+2 more)
src/robot_arm_sdk/interbotix_ros_core/interbotix_ros_slate/interbotix_ros_slate/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_core/interbotix_ros_slate/interbotix_slate_driver/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_core/interbotix_ros_slate/interbotix_slate_driver/src/: slate_base.cpp  slate_base_node.cpp
src/robot_arm_sdk/interbotix_ros_core/interbotix_ros_uxarms/interbotix_ros_uxarms/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_core/interbotix_ros_uxarms/xarm_api/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_core/interbotix_ros_uxarms/xarm_api/include/: xarm_driver.h  xarm_ros_client.h
src/robot_arm_sdk/interbotix_ros_core/interbotix_ros_uxarms/xarm_api/src/: xarm_driver.cpp  xarm_driver_node.cpp  xarm_ros_client.cpp
src/robot_arm_sdk/interbotix_ros_core/interbotix_ros_uxarms/xarm_msgs/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_core/interbotix_ros_xseries/dynamixel_workbench_toolbox/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_core/interbotix_ros_xseries/interbotix_xs_msgs/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_core/interbotix_ros_xseries/interbotix_xs_sdk/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_core/interbotix_ros_xseries/interbotix_xs_sdk/scripts/: xs_sdk_sim
src/robot_arm_sdk/interbotix_ros_core/interbotix_ros_xseries/interbotix_xs_sdk/src/: xs_sdk.cpp  xs_sdk_obj.cpp
src/robot_arm_sdk/interbotix_ros_manipulators/interbotix_ros_uxarms/interbotix_uxarm_control/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_manipulators/interbotix_ros_uxarms/interbotix_uxarm_control/launch/: uxarm_control.launch.py
src/robot_arm_sdk/interbotix_ros_manipulators/interbotix_ros_uxarms/interbotix_uxarm_gazebo/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_descriptions/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_descriptions/launch/: remote_view.launch.py  xsarm_description.launch.py
src/robot_arm_sdk/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_descriptions/rviz/: xsarm_description.rviz
src/robot_arm_sdk/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_moveit/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_moveit/launch/: moveit.rviz
src/robot_arm_sdk/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_perception/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_perception/launch/: xsarm_perception.launch.py
src/robot_arm_sdk/interbotix_ros_manipulators/interbotix_ros_xsarms/interbotix_xsarm_perception/rviz/: xsarm_perception.rviz
src/robot_arm_sdk/interbotix_ros_toolboxes/interbotix_common_toolbox/interbotix_common_modules/: CMakeLists.txt  package.xml  setup.py
src/robot_arm_sdk/interbotix_ros_toolboxes/interbotix_common_toolbox/interbotix_common_toolbox/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_toolboxes/interbotix_common_toolbox/interbotix_landmark_modules/: CMakeLists.txt  package.xml  setup.py
src/robot_arm_sdk/interbotix_ros_toolboxes/interbotix_common_toolbox/interbotix_landmark_modules/test/: test_landmark.py
src/robot_arm_sdk/interbotix_ros_toolboxes/interbotix_common_toolbox/interbotix_moveit_interface/: CMakeLists.txt  README.md  package.xml
src/robot_arm_sdk/interbotix_ros_toolboxes/interbotix_common_toolbox/interbotix_moveit_interface/scripts/: move_to_point.sh
src/robot_arm_sdk/interbotix_ros_toolboxes/interbotix_common_toolbox/interbotix_moveit_interface/src/: moveit_interface.cpp  moveit_interface_obj.cpp
src/robot_arm_sdk/interbotix_ros_toolboxes/interbotix_common_toolbox/interbotix_moveit_interface/srv/: MoveItPlan.srv
src/robot_arm_sdk/interbotix_ros_toolboxes/interbotix_common_toolbox/interbotix_tf_tools/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_toolboxes/interbotix_common_toolbox/interbotix_tf_tools/launch/: tf_rebroadcaster_launch.py
src/robot_arm_sdk/interbotix_ros_toolboxes/interbotix_common_toolbox/interbotix_tf_tools/src/: tf_rebroadcaster.cpp
src/robot_arm_sdk/interbotix_ros_toolboxes/interbotix_perception_toolbox/interbotix_perception_modules/: CMakeLists.txt  package.xml
src/robot_arm_sdk/interbotix_ros_toolboxes/interbotix_perception_toolbox/interbotix_perception_modules/cmake/: FindFLANN.cmake
src/robot_arm_sdk/px100_control_ui/: README.md  package.xml  setup.cfg  setup.py
src/robot_arm_sdk/px100_control_ui/launch/: px100_control_ui.launch.py
src/robot_arm_sdk/px100_control_ui/src/px100_control_ui/: __init__.py  ui_node.py
src/robot_arm_sdk/px100_control_ui/web/: index.html
src/visual/2D-detection/: README.md  dataset.py  detection_node.py  detector.py  inference.py  package.xml  setup.cfg  setup.py  train.py
src/visual/oakd_bringup/: package.xml  setup.py
src/visual/oakd_bringup/config/: oakd_yolo.yaml
src/visual/oakd_bringup/launch/: camera.launch.py
src/visual/oakd_bringup/resource/: oakd_bringup
src/visual/spatial_calculator/: package.xml  setup.cfg  setup.py
src/visual/spatial_calculator/launch/: spatial_calculator.launch.py
src/visual/spatial_calculator/spatial_calculator/: spatial_calculator_node.py
src/visual/yolo_msgs/: CMakeLists.txt  package.xml
src/visual/yolo_trash/: README.md  dataset.py  package.xml  setup.py  train.py
src/visual/yolo_trash/config/: oakd_yolo.yaml  yolov8.json
src/visual/yolo_trash/launch/: detection_node.launch.py  oakd_yolo.launch.py
src/visual/yolo_trash/yolo_trash/: best.pt  detector.py  inference.py  yolo_trash_publisher.py  yolo_trash_subscriber.py
src/visual/yolo_trash/yolo_trash/best_7cls_openvino_model/: best_7cls.xml  metadata.yaml
(+126 files in other folders)
