<?xml version="1.0"?>
<package format="3">
  <name>trash_detection_2d</name>
  <version>0.0.1</version>
  <description>YOLO trash detection</description>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>yolov8_msgs</depend>
  <depend>rosbag2_py</depend>

  <export><build_type>ament_python</build_type></export>
</package>
