<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interbotix_ros_slate</name>
  <version>0.0.0</version>
  <description>The interbotix_ros_slate metapackage</description>
  <maintainer email="trsupport@trossenrobotics.com">Trossen Robotics</maintainer>
  <license>BSD-3-Clause</license>
  <author email="trsupport@trossenrobotics.com">Trossen Robotics</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>interbotix_slate_driver</exec_depend>
  <exec_depend>interbotix_slate_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
