<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interbotix_ros_uxarms</name>
  <version>0.0.0</version>
  <description>Metapackage for Interbotix uArm (xArm) support</description>
  <maintainer email="jason@ufactory.cc">Jason Peng</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xarm_api</exec_depend>
  <exec_depend>xarm_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
