<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamixel_workbench_toolbox</name>
  <version>2.2.0</version>
  <description>
    Library with dynamixel_item, dynamixel_tool, dynamixel_driver and dynamixel_workbench classes for Dynamixel control.
  </description>
  <license>Apache-2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>dynamixel_sdk</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
