<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interbotix_xsarm_perception</name>
  <version>0.0.0</version>
  <description>The interbotix_xsarm_perception package</description>
  <maintainer email="trsupport@trossenrobotics.com">Solomon Wiznitzer</maintainer>
  <license>BSD</license>
  <author email="solomon@trossenrobotics.com">Solomon Wiznitzer</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- interbotix_perception_modules: add when converted to ROS 2 -->
  <exec_depend>interbotix_xsarm_control</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
