<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interbotix_common_toolbox</name>
  <version>0.0.0</version>
  <description>The interbotix_common_toolbox metapackage</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>
  <author email="trsupport@trossenrobotics.com">Luke Schmitt</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>interbotix_common_modules</exec_depend>
  <exec_depend>interbotix_landmark_modules</exec_depend>
  <exec_depend>interbotix_tf_tools</exec_depend>
  <!-- interbotix_moveit_interface: add when converted to ROS 2 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
